--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name="light_gray">#C5C5C5</color>
+    <color name="very_light_gray">#EEEEEE</color>
 </resources>
