--- a/app/src/main/res/layout/activity_habit_list.xml
+++ b/app/src/main/res/layout/activity_habit_list.xml
@@ -30,4 +30,16 @@
         app:layout_constraintTop_toBottomOf="@+id/appTitleTextView"
         tools:itemCount="10"
         tools:listitem="@layout/item_habit_card" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/habitListFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:background="@color/very_light_gray"
+        android:contentDescription="@string/description_add_new_habit"
+        android:src="@drawable/baseline_add_36"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
