feat: добавлена логика изменения цвета

--- a/app/src/main/res/layout/activity_habit_editor.xml
+++ b/app/src/main/res/layout/activity_habit_editor.xml
@@ -142,7 +142,7 @@
 
         <EditText
             android:id="@+id/habitEditorColorRgbEditText"
-            android:layout_width="0dp"
+            android:layout_width="140dp"
             android:layout_height="48dp"
             android:hint="@string/color_in_rgb"
             android:importantForAutofill="no"
@@ -154,7 +154,7 @@
 
         <EditText
             android:id="@+id/habitEditorColorHsvEditText"
-            android:layout_width="104dp"
+            android:layout_width="140dp"
             android:layout_height="48dp"
             android:layout_marginStart="16dp"
             android:hint="@string/color_in_hsv"
@@ -166,15 +166,14 @@
             app:layout_constraintTop_toTopOf="@+id/habitEditorColorRgbEditText" />
 
         <View
-            android:id="@+id/view"
+            android:id="@+id/habitEditorColorPicker"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginStart="16dp"
             android:background="@drawable/shape_rounded_card_stroked"
             android:backgroundTint="@color/white"
             android:backgroundTintMode="multiply"
             app:layout_constraintBottom_toBottomOf="@+id/habitEditorColorHsvEditText"
-            app:layout_constraintStart_toEndOf="@+id/habitEditorColorHsvEditText"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/habitEditorColorHsvEditText" />
 
         <Button
